--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+    <link rel="stylesheet" href="style.css">
+
     <div class="container">
         <!-- Página Inicial -->
         <div id="home-page" class="page active">
-            <header class="header">
+            <header class="header">a
                 <h1 class="main-title">Quiz Educativo</h1>
                 <p class="subtitle">
                     Teste seus conhecimentos em matemática, geografia e história. 
